# company_search

./: Dockerfile  Makefile  README.md  docker_prerequisite.sh  pyproject.toml
app/: main.py
app/api/routes/: api.py  company.py  docs.py
app/core/: config.py
app/models/: base.py  company.py
app/schemas/: company.py
app/scripts/: company_tag_sample.csv  dump.py
